regression_tests/snap/check/testom20/testom20.lst
================================================================================

                      PROGRAM SNAP  Version 2.7.14-f90eaf0

                       Survey Network Adjustment Program

                    Copyright: Land Information New Zealand
                              Author: Chris Crook
                       Version date: Sep  8 2018 08:54:01

================================================================================
                     Run at  8-SEP-2018 09:03:50 by ccrook




================================================================================
Regression test om1 - obs modifications - invalid specification should cause er    8-SEP-2018 09:03:50

                                     ERRORS

================================================================================

Note: 7 errors reported in testom20.err
